third_party/move/move-compiler-v2/tests/more-v1/parser/byte_string_invalid_hex.exp

Diagnostics:
error: invalid byte string
  ┌─ tests/more-v1/parser/byte_string_invalid_hex.move:3:18
  │
3 │         b"diem \xG0"
  │                  ^ Invalid hexadecimal character: 'G'
